# flagWarehouse

./: README.md  pyproject.toml
client/: client.py
client/exploits/: example.py  template.py
server/: config.py  requirements.txt
server/application/: .env.template  __init__.py  submission_loop.py
