[tool.poetry]
name = "flagwarehouse"
version = "0.1.0"
description = "An attack/defense framework"
authors = ["Robert Babaev <perfknight@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.1.2"
ordered-set = "~4.0.2"
requests = "~2.24.0"
python-dotenv = "~0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
